--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body>
     <div class="container">
         <div class="game-board">
-            <div class="marker-field"></div>
-            <div class="marker-field"></div>
-            <div class="marker-field"></div>
-            <div class="marker-field"></div>
-            <div class="marker-field"></div>
-            <div class="marker-field"></div>
-            <div class="marker-field"></div>
-            <div class="marker-field"></div>
-            <div class="marker-field"></div>
+            <button class="marker-field"></button>
+            <button class="marker-field"></button>
+            <button class="marker-field"></button>
+            <button class="marker-field"></button>
+            <button class="marker-field"></button>
+            <button class="marker-field"></button>
+            <button class="marker-field"></button>
+            <button class="marker-field"></button>
+            <button class="marker-field"></button>
         </div>
     </div>
 </body>
