--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="info-container">
+            <p class="turnDisplayer"></p>
+        </div>
         <div class="game-board">
             <button class="marker-field"></button>
             <button class="marker-field"></button>
