added displayers and stopPlayers function

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <div class="container">
+        <h1 id="turnDisplayer" class="displays">Current player: X</h1>
         <div class="game-board">
             
         </div>
+        <h1 id="resultDisplayer" class="displays">Who will win?</h1>
     </div>
 </body>
 </html>
