added reset btn

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             
         </div>
         <h1 id="resultDisplayer" class="displays">Who will win?</h1>
+        <button class="resetBtn" onclick="Gameboard.gameStates.resetGame()">Reset Board</button>
     </div>
 </body>
 </html>
